042_full_deployment_eks/manifests/deployment-school-project.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-project  # Sets Deployment name
  namespace: full-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: school-project
  template:
    metadata:
      labels:
        app: school-project
    spec:
      containers:
        - name: school-project
          image: misohu/django-school-project:postgres
          imagePullPolicy: Always
          command:
          - /bin/sh
          - -c
          - python manage.py runserver 0.0.0.0:8000
          ports:
            - containerPort: 8000  # Exposes container port
          resources: {}
