042_full_deployment_eks/manifests/service-school-project.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-project
  namespace: full-deployment
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: school-project
